# cpp-class-exercises

./: .clang-tidy  .gitignore  CMakeLists.txt  ClearBins.cmake  README.MD  clear_bins.cmake
.cache/clangd/index/: add.hpp.4901A82F650FD9CA.idx  add.hpp.9D3331B60FCFB7B2.idx  battleship.cpp.04FF1025B0D22089.idx  battleship.cpp.EA2D2EA658C0101E.idx  battleship.hpp.0F2DB00F304659C2.idx  battleship.hpp.6D60385CCD08019F.idx  calculator.cpp.7508016272BBCC7A.idx  calculator.cpp.914F4AB08882C62A.idx  calculator.hpp.1EBBFD21B6F81729.idx  calculator.hpp.DABBDBD64BBE2BA9.idx  currency.hpp.52B97CF8BC721446.idx  currency.hpp.D07220CB71C695A4.idx  date.cpp.2EC50305876C37B8.idx  date.cpp.33B46D7CE5AED161.idx  date.cpp.476452A412AD080D.idx  date.cpp.DAA77390435D0701.idx  date.hpp.25173316917FA346.idx  date.hpp.CB384949E404B52E.idx  date.hpp.DF89023FA9776C32.idx  date.hpp.FA8AB2B9725FA9F9.idx  game.hpp.71C7E2485F6CC2DB.idx  main.cpp.0373B198F0ECA995.idx  main.cpp.055B044F2940ED4F.idx  main.cpp.0B31F92BE37A828C.idx  main.cpp.0D0B4F72B968114F.idx  main.cpp.0D0C630EACA6C044.idx  main.cpp.13217B9F44726500.idx  main.cpp.13789D3CB851B0B7.idx  main.cpp.155D4F1F6BD2890E.idx  main.cpp.1A9450A2E7F2051F.idx  main.cpp.1ADF009F04F74326.idx  main.cpp.1F3B1B4226832EE4.idx  main.cpp.2A826AFAE35B115A.idx  main.cpp.2E2103E2B96F9EE8.idx  main.cpp.2F8A62A65BB04BBC.idx  main.cpp.33939704BE7C2336.idx  main.cpp.340A86347DAF9513.idx  main.cpp.37C51771B31C5101.idx  main.cpp.3B3A362D82FF8EEE.idx  main.cpp.406834D7CBECC8D7.idx  (+83 more)
hub/: main.cpp
lab1/all_tasks/: main.cpp
lab10/cli/: main.cpp
lab10/editor/: main.cpp
lab10/students/: main.cpp
lab10/supermarket/: main.cpp
lab10/traffic/: main.cpp
lab10/xml/: main.cpp
lab11/task1/: main.cpp
lab11/task2/: main.cpp
lab11/task3/: main.cpp
lab11/task4/: main.cpp
lab11/task5/: main.cpp
lab11/task6/: main.cpp
lab2/: .clang-format  CMakeLists.txt
lab2/Calculator/: CMakeLists.txt  calculator  main.cpp
lab2/Calculator/include/: calculator.hpp
lab2/Calculator/src/: calculator.cpp
lab2/Changer/: CMakeLists.txt  changer
lab2/ClockCalendar/: CMakeLists.txt  clockCalendar  main.cpp
lab2/ClockCalendar/source/: time.cpp
lab2/Converter/: CMakeLists.txt  converter
lab2/Converter/include/: mass.hpp  temperature.hpp  volume.hpp
lab2/Date/: CMakeLists.txt  date  main.cpp
lab2/NumberGame/: CMakeLists.txt  main.cpp  numberGame
lab2/calculator/: main.cpp
lab2/changer/: main.cpp
lab2/clock_calendar/: main.cpp
lab2/clock_calendar/include/: date.hpp  time.hpp
lab2/converter/: main.cpp
lab2/converter/include/: currency.hpp
lab2/date/: main.cpp
lab2/date/include/: date.hpp
lab2/date/source/: date.cpp
lab3/Task1/: CMakeLists.txt  main.cpp
lab3/Task2/: CMakeLists.txt  main.cpp  task2
lab3/Task3/: CMakeLists.txt  main.cpp  task3
lab3/Task4/: CMakeLists.txt  main.cpp
lab3/Task5/: CMakeLists.txt  main.cpp  task5
lab3/task2/: main.cpp
lab3/task3/: main.cpp
lab3/task4/: main.cpp
lab3/task4/include/: add.hpp
lab3/task5/: main.cpp
lab4/alphabet/: main.cpp
lab4/anagram/: CMakeLists.txt  main.cpp  words.txt
lab4/comment_stripper/: main.cpp
lab4/contacts/: main.cpp
lab4/contacts/storage/: contacts.csv
lab4/text_replace/: main.cpp
lab4/text_replace/test/: textfile1 copy.txt  textfile1.txt  textfile2.txt
lab4/textreplace/: main.cpp
lab4/todo/: main.cpp  words.txt
lab4/todo/storage/: done.csv  pending.csv
lab5/Task1/: main.cpp
lab5/Task2/: main.cpp
lab5/Task3/: main.cpp
lab5/Task4/: main.cpp
lab5/Task5/: main.cpp
lab5/task4/: main.cpp
lab5/task6/: main.cpp
lab5/task7/: main.cpp
lab5/task8/: main.cpp
lab6/task1/: main.cpp
lab6/task2/: main.cpp
lab6/task3/: main.cpp
lab6/task4/: main.cpp
lab6/task6/: main.cpp
lab7/task1/: main.cpp
lab7/task2/: main.cpp
lab7/task3/: input.txt  main.cpp
lab7/task4/: main.cpp
lab7/task5/: main.cpp
lab8/task1/: game.hpp  main.cpp
lab8/task2/: main.cpp  pics.hpp
lab8/task3/: main.cpp
lab8/task4/: main.cpp
lab8/task4/include/: battleship.hpp
lab8/task4/source/: battleship.cpp
lab8/task5/: main.cpp
lab8/task5/include/: puzzle.hpp
lab8/task5/source/: puzzle.cpp
lab8/task6/: main.cpp
lab9/task1/: main.cpp
lab9/task2/: main.cpp
lab9/task3/: main.cpp
lab9/task4/: main.cpp
lab9/task5/: main.cpp
lab9/task6/: main.cpp
